# agent-ops

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  run_demo.py
.claude/skills/caveman-review/: NOTICE.md
.github/workflows/: caveman-review.yml  claude-review.yml  leader-review.yml
agentops/: __init__.py  adapters.py  approvals.py  brains.py  charter.py  cli.py  db.py  distill.py  escalations.py  gateway.py  handlers.py  identity.py  memory.py  queue.py  telemetry.py  workflow.py
agentops/migrations/: 001_core.sql  002_memory.sql  003_domain_l1.sql
charters/: asset-match.md  engineer.md  etl.md  gateway.md  qa.md  reviewer.md  scribe.md  simready.md  synthdata.md
fixtures/: warehouse_a.json
memory/: review-rules.md
specs/: code-review.spec.json  dataset.spec.json  simready-warehouse.spec.json
tests/: test_platform.py
workflows/: code-change.json  simready-l1.json  weekly-report.json
